[package]
name = "liquidy"
version = "0.1.0"
authors = ["Michael Melanson <michael.melanson@shopify.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"rutie" = { git = "https://github.com/danielpclark/rutie.git", features=["no-link"] }
"serde" = { version = "1.0", features = ['derive'] }
"serde_json" = "*"

[lib]
name = "liquidy"
crate-type = ["cdylib"]

[profile.release]
debug = true